# HGserver

./: .gitignore  BuildItem.cfg  BuildItem.h  Builds.sln  CMakeLists.txt  Client.cpp  Client.h  Crusade.cfg  DelayEvent.h  DupItemID.cfg  DynamicObject.h  Fish.cpp  Fish.h  Game.cpp  Game.h  GateServer.cfg  GlobalDef.h  GuildsMan.cpp  GuildsMan.h  HGserver.dsp  HGserver.ncb  HGserver.opt  HGserver.plg  HGserver.vcxproj  HGserver.vcxproj.filters  Item.cfg  Item.cpp  Item.h  Item2.cfg  Item3.cfg  Lserver.cfg  Magic.cfg  Magic.cpp  Magic.h  Map.cpp  Map.h  Mineral.cpp  Mineral.h  Misc.cpp  Msg.h  (+29 more)
Debug/: BuildItem.sbr  CL.read.1.tlog  CL.write.1.tlog  Client.sbr  DelayEvent.sbr  DynamicObject.sbr  Fish.sbr  Game.sbr  GuildsMan.sbr  HGserver.lastbuildstate  HGserver_manifest.rc  Item.sbr  Magic.sbr  Map.sbr  Mineral.sbr  Misc.sbr  Msg.sbr  Npc.sbr  OccupyFlag.sbr  Potion.sbr  Quest.sbr  Skill.sbr  StrategicPoint.sbr  Teleport.sbr  TeleportLoc.sbr  Tile.sbr  cl.command.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb  wmain.sbr
GameData/: CrusadeGUID.Txt
mapdata/: ARESDEN.TXT  DGLV4.TXT  arebrk11.txt  arebrk12.txt  arebrk21.txt  arebrk22.txt  arefarm.TXT  aremidl.TXT  aremidr.TXT  aresden_my.amd  aresdend1.txt  areuni.txt  arewrhus.amd  arewrhus.txt  bisle.amd  bisle.txt  bsmith_1.amd  bsmith_1.txt  bsmith_2.amd  bsmith_2.txt  cath_1.txt  cath_2.txt  cityhall_1.txt  cityhall_2.txt  default.txt  dglv2.txt  dglv3.amd  dglv3.txt  elvbrk11.txt  elvbrk12.txt  elvbrk21.txt  elvbrk22.txt  elvfarm.TXT  elvine.txt  elvined1.txt  elvmidl.TXT  elvmidr.TXT  elvmidr.amd  elvuni.txt  elvwrhus.txt  (+32 more)
src/: ActionID.h  Client.cpp  Client.h  CrusadeCore.cpp  DelayEvent.h  DynamicObject.cpp  DynamicObject.h  DynamicObjectID.h  Game.cpp  Game.h  Map.h  MessageIndex.h  Misc.cpp  NetMessages.h  Npc.h  Potion.h  Quest.h  StrTok.cpp  StrategicPoint.h  Teleport.cpp  TeleportLoc.cpp  Tile.cpp  UserMessages.h  (+7 more)
